--- a/basicgui.ui
+++ b/basicgui.ui
@@ -182,7 +182,7 @@
                 </sizepolicy>
                </property>
                <property name="text">
-                <string>Select a Burn or Day...</string>
+                <string>Select a Day...</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
@@ -224,7 +224,7 @@
             <item>
              <widget class="QLineEdit" name="modelLineEdit">
               <property name="text">
-               <string>None set...</string>
+               <string>Not Saved...</string>
               </property>
               <property name="readOnly">
                <bool>true</bool>
@@ -280,7 +280,7 @@
           <item row="0" column="1">
            <widget class="QLineEdit" name="trainModelLineEdit">
             <property name="text">
-             <string>None set...</string>
+             <string>Not Saved...</string>
             </property>
             <property name="readOnly">
              <bool>true</bool>
@@ -306,7 +306,7 @@
           <item row="1" column="1">
            <widget class="QLineEdit" name="trainDatasetLineEdit">
             <property name="text">
-             <string>None set...</string>
+             <string>Not Saved...</string>
             </property>
             <property name="readOnly">
              <bool>true</bool>
@@ -352,7 +352,7 @@
           <item row="0" column="1">
            <widget class="QLineEdit" name="predictModelLineEdit">
             <property name="text">
-             <string>None set...</string>
+             <string>Not Saved...</string>
             </property>
             <property name="readOnly">
              <bool>true</bool>
@@ -378,7 +378,7 @@
           <item row="1" column="1">
            <widget class="QLineEdit" name="predictDatasetLineEdit">
             <property name="text">
-             <string>None set...</string>
+             <string>Not Saved...</string>
             </property>
             <property name="readOnly">
              <bool>true</bool>
